# mini_api

./: README.md  cli_command.py  logger_config.py  main.py  pyproject.toml  settings.py
src/: app.py  config.py  constants.py
src/api/v1/: endpoints.py
src/api/v1/swagger_config/: driver.yaml  drivers.yaml  report.yaml
src/core/: converter.py  db_tools.py  proxy_interface.py
src/db/: database.py  db_tools.py  drivers_classes.py  models.py
tests/: conftest.py  precondition_data.py  test_cli_command.py  test_converter.py  test_db_tools.py  test_endpoints.py  test_proxy_interface.py  utils.py
tests/functional/: test_endpoints_end_to_end.py
